--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="6Oq5V6pg-Gc4ceRHWCIZqbL2Bmz7oOIgkvQdu-co8xg" />
     <meta name="description" content="Studien zeigen: 67% höhere Produktivität durch professionelle Reinigung. Erfahren Sie, wie Gebäudereinigung Gesundheit und Effizienz steigert.">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="author" content="Ruhr-Rein Gebäudereinigung">
