--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Warum 67% der Unternehmen auf professionelle Gebäudereinigung setzen">
     <meta name="twitter:description" content="Studien zeigen: 67% höhere Produktivität durch professionelle Reinigung. Erfahren Sie, wie Gebäudereinigung Gesundheit und Effizienz steigert.">
-    <link rel="canonical" href="">
+    <link rel="canonical" href="https://ruhrrein.github.io/Ruhr-Rein-Geb-udereinigung/">
     <title>Warum 67% der Unternehmen auf professionelle Gebäudereinigung setzen</title>
     
     <script type="application/ld+json">
@@ -42,7 +42,7 @@
       "image": "https://images.unsplash.com/photo-1524803504179-6d7ae4d283f7",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": ""
+        "@id": "https://ruhrrein.github.io/Ruhr-Rein-Geb-udereinigung/"
       },
       "keywords": "Gebäudereinigung, professionelle Reinigung, Büroreinigung, Unterhaltsreinigung, gewerbliche Reinigung, Reinigungsservice, Facility Management, Hygienestandards, Arbeitsplatzreinigung, Reinigungsfirma"
     }
